test/grammar/schema/check_block/check_block_fail_11/stderr.golden
error[E3M38]: EvaluationError
 --> ${CWD}/main.k:3:9
  |
3 | alice = pkg.Person {}
  |         ^ Instance check failed
  |
 --> ${CWD}/pkg/person.k:5:1
  |
5 |         name, "name should be defined"
  |  Check failed on the condition: name should be defined
  |